# MetaInfer

./: .gitignore  .gitmodules  .pre-commit-config.yaml  0001-llm_engine.py-engine-tests-python-test_real_inferenc.patch  AGENT_SKILL.md  CLAUDE.md  LICENSE  PROGRESS.md  README.md  TODO  bench_api.sh  bench_item_compare.py  checkagetn.py  inference_blueprint.json  llm_engine.py  offlinebench.py  openai_tp_server.py  openai_tp_server_p4.py  profile_attn.py  prompts.md  pyproject.toml  requirements.txt  run_compare_metainfer_vllm.sh  run_test_deepseek_tp.sh  start_tp_infer_service.sh  wait_and_test_p4.sh
chat/: index.html  server.py
docs/: mac_gpu_engine.md
engine/: __init__.py  block_manager.py  kv_specs.py  memory_pool.py  model_runner.py  sampler.py  scheduler.py  structs.py  tp_distributed.py
mac_gpu/: block_manager.py  engine.py  main.py  memory_pool.py  model_runner.py  sampler.py  scheduler.py
models/: __init__.py  deepseek.py
notebooks/: MEMORY.md  task1-7一次性生成朴素框架.txt  task10从QwenTP到dsTP验证.txt  task9从朴素框架到Qwen的tp.txt  tasks.md
notebooks-cn/: task1-7一次性生成朴素框架.txt  task10:从QwenTP到dsTP验证.txt  task9:从朴素框架到Qwen的tp.txt
perf_iteration/: ROUND_0_BASELINE.md  ROUND_1_BOTTLENECK_FIXES.md  ROUND_1_O2_UNBLOCK.md  ROUND_2_CONTIGUOUS_SPLIT.md  ROUND_3_LIMITS.md  bench_target_tp4.py  bench_vllm_tp4.py  bench_vllm_tp4_standalone.py  profiler_compare.py  profiler_vllm_tp4.py
phase_report/: PHASE10_IMPLEMENTER_REPORT.md  PHASE10_MEMORY.md  PHASE10_SPEC_REVIEW_REPORT.md  PHASE10_SUMMARY.md  PHASE10_VERIFICATION_REPORT.md  PHASE11_IMPLEMENTER_REPORT.md  PHASE11_MEMORY.md  (+48 more)
(+381 files in other folders)
