[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meta-infer"
version = "0.1.0"
description = "AI-powered LLM inference framework generator"
readme = "notebooks/00_overview/README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "KonghaYao" }]
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "pre-commit"]

[tool.hatch.build.targets.wheel]
packages = ["src/meta_infer"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
